Finished core files. Started on Tests.